creusot/tests/should_fail/prusti/deref/send_back.stderr
error[creusot]: `&'a u32` cannot be moved from `'curr` to `'old` since it didn't exist at that point
  --> send_back.rs:11:21
   |
11 | #[ensures(old(deref(result)) == old(deref(x)))]
   |                     ^^^^^^

error: aborting due to previous error

